[gd_scene load_steps=7 format=4]

[ext_resource type="Script" path="res://Menus/pause_menu.gd" id="1"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2"]
[ext_resource type="PackedScene" uid="uid://dcoptsn8erdwh" path="res://UI/panel.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dl7toa1ds5go7" path="res://UI/blue_button.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://ijg7isnlb4ho" path="res://Menus/options.tscn" id="5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_etuwn"]
shader = ExtResource("2")
shader_parameter/lod = 1.0

[node name="Pause Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_etuwn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" parent="." instance=ExtResource("3")]
custom_minimum_size = Vector2(636, 672)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -336.0
offset_right = 318.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -102.0
offset_right = 122.0
offset_bottom = -21.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "<<"

[node name="Title" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 30.0
offset_right = 96.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -60.5
offset_right = 90.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Resume" parent="Menu/VBoxContainer" instance=ExtResource("4")]
layout_mode = 2
text = "resume"

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "options"

[node name="Start Over" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "start over"

[node name="Main Menu" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "main menu"

[node name="Options" parent="." instance=ExtResource("5")]
visible = false
offset_top = -336.0
offset_bottom = 276.0

[connection signal="mouse_entered" from="Menu/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Menu/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Start Over" to="." method="_on_start_over_mouse_entered"]
[connection signal="pressed" from="Menu/VBoxContainer/Start Over" to="." method="_on_start_over_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Main Menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Menu/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
